Ensure wide code blocks don't overflow
Ideally we want to add an indication that the code is horizontally
scrollable.

--- a/src/assets/styles/base/_sphinx.scss
+++ b/src/assets/styles/base/_sphinx.scss
@@ -24,3 +24,7 @@ h6:hover a.headerlink,
 a.headerlink:hover {
   opacity: 1;
 }
+
+.literal-block-wrapper .highlight {
+  overflow-x: auto;
+}
